--- a/content/post/da_post_covid.adoc
+++ b/content/post/da_post_covid.adoc
@@ -1,6 +1,6 @@
 ---
 draft: true
-title: What does it mean to be a Developer Advocate and not travel?
+title: Hanging up my Boarding Passes and Jetlag…for now
 date: "2022-04-01T12:54:33Z"
 image: "/images/2022/04/IMG_5046.jpeg"
 thumbnail: "/images/2022/04/IMG_5037.jpeg"
@@ -40,89 +40,18 @@ I am truly thankful for the opportunity that not travelling afforded me to appre
 
 I try to avoid having regrets, but I am a bit sad to think of the years that I was around less and missed out. "_You don't get that time with them again_" is an oft-repeated phrase but it is true in every sense. I think the nuance that's missed from it in casual use is that it's easy to convince oneself that since one is spending _some_ time then that counts as "_that time_". But it doesn't. Being around 70% of the time is a WORLD OF DIFFERENCE from being around 100% of the time. 
 
-I made this point link:/2020/12/03/life-as-a-developer-advocate-nine-months-into-a-pandemic/#_the_whole_is_less_than_the_sum_of_the_parts[before], but if you're away 30% of the time that doesn't mean you just step back in to the same remaining 70% of home life that you would were you around all the time. Being away fundamentally alters your standing and relationship in the family. I'm not saying it alters it __negatively__ per se - but just that it alters it. You're not the person who comes home from the office (or emerges from the home study) every evening for tea, to chat about the day, how was school, what funny toilet joke did you hear. You're the person who _might_ be there, who _might_ be around to share a story with or who __might__ instead be on the end of a FaceTime call, probably running through an airport or on a weird timezone. 
+I made this point link:/2020/12/03/life-as-a-developer-advocate-nine-months-into-a-pandemic/#_the_whole_is_less_than_the_sum_of_the_parts[before], but if you're away 30% of the time that doesn't mean you just step back in to the same remaining 70% of home life that you would were you around all the time. Being away fundamentally alters your standing and relationship in the family. I'm not saying it alters it __negatively__ per se - but just that it alters it. You're not the person who comes home from the office (or emerges from the home study) every evening for tea, to chat about the day, how was school, what funny toilet joke did you hear. You're the person who __might__ be there, who __might__ be around to share a story with or who __might__ instead be on the end of a FaceTime call, probably running through an airport or on a weird timezone. 
 
 All families are different. All relationships are different. But I have found being off the road truly wonderful. My relationship with my children is much closer.  Life is more stable. More solid.
 
 == So what now? 
 
-*I'm not going to be travelling again as part of my job*. To be precise: I'll travel _now and then_, but not as an integral part of my role. 
+*I'm not going to be travelling again as part of my job*. To be precise: I'll travel _now and then_, but not as an central part of my role. 
 
-Honestly? That's a little bit scary. Getting on an airplane or train to go to a conference _was what I did for my job_. Everything else fitted in around that. But I want to be at home to be an integral part of my kids life growing up, and I have the privilege of an employer who is happy with me doing that. I totally recognise that privilege, and I realise that some people would _love_ to be at home but _have_ to be on the road. 
+Honestly? That's a little bit scary. Getting on an airplane or train to go to a conference _was what I did for my job_. Everything else fitted in around that. But I want to be at home to be an integral part of my kids life growing up. 
+
+I recognise that some people would _love_ to be at home but _have_ to be on the road, and I recognise my privilege of having an employer who is happy with me not travelling.
 
 *So what now*? Can I even call myself a Developer Advocate once my airline status has dropped from platinum, my conference swag wardrobe has faded into threads in the wash, and I occassionally join the gibbering masses flailing around at security whilst the practised professionals tut quietly behind me? 
 
-== Developer Advocacy from the comfort of your own home
-
-I'm convinced that a developer advocate _can_ be effective remotely. As a profession we've all spent two years figuring out how to do advocacy remotely. Some of it worked out great. Some of it, less so. 
-
-Below I talk about some of the things that I believe make important contributions as a Developer Advocate whilst staying at home. I'm deliberately avoiding the discussion of travel vs content-creation from a scaling point of view, as this is a whole topic in itself. 
-
-_Make sure to check out Ricardo Ferreira's https://riferrei.com/how-to-create-more-effective-developer-content/[excellent article] which is relevant to this subject too._
-
-=== Virtual Conferences
-
-bleugh. nah. nope. 
-
-I've written before (link:/2020/12/03/life-as-a-developer-advocate-nine-months-into-a-pandemic/#_virtual_conferences_as_a_speaker[1] link:/2020/03/13/are-tech-conferences-dead/[2]) about virtual conferences so won't rehash it here. Short to say, as a speaker I've had my fill of talking to a faceless webcam, and I'm pretty sure as attendees most people are quite content to watch a video on YouTube at a later date than attending an online event that is almost, but not quite, entirely unlike an actual conference. 
-
-A few managed to put on good virtual conferences. The folk over at Container Solutions put on link:/2020/03/13/are-tech-conferences-dead/#_software_circus[Software Circus] which was a good example of a virtual conference done well. But by-and-large, virtual conferences were and are a dispiriting affair for all involved. 
-
-=== Video (YouTube)
-
-_Just as the vacuum cleaner is known by most as a Hoover, the same for video platforms on which we dissemninate material for developers. It's YouTube and there's no point beating around that bush. TikTok et al are a different beast and I'm not considering those here._
-
-Many Developer Advocates, http://youtube.com/rmoff[myself included], took to YouTube at the beginning of the pandemic. It was an obvious outlet - if we couldn't be on stage then damnit, we'd get ourselves in front of a camera. 
-
-I recently wrote a Twitter thread with some stats from my YouTube 
-
-https://twitter.com/rmoff/status/1504508176510730251
-
-Just as some Developer Advocates will focus on conference speaking and have their keynotes down to a T, many nowadays will focus on video. As a result, it would not be unusual to expect a Developer Advocate to not only be comfortable on presenting on screen, but also producing and editing such a video.
-
-
-=== Blogging
-
-Blogging was always there for us when we were off the road, and now it's still here for us. Whilst some developers learn through watching, others through reading. A well-written blog can be the kind of material with a long, long tail. It can link:/2018/03/06/why-do-we-need-streaming-etl/[promote an idea], it can link:/2021/02/26/loading-delimited-data-into-kafka-quick-dirty-but-effective/[solve a specific problem], or link:/2019/12/18/detecting-and-analysing-ssh-attacks-with-ksqldb/[illustrate a fun idea]. 
-
-=== Meeting developers where they are online
-
-If you're not at conferences, or meetups, or customer site visits, how do you know what developers are doing? How can you advocate _for_ developers and not just _to_ them? The value of a Developer Advocate to an organisation is not just the outbound advocacy but the inbound. The bug reports, the "wouldn't it be neat if it did this", the "I was trying to build this thing with your product" stories. If you're face to face with developers you can't help but have these conversations. If you're not travelling, then you have to find that elsewhere. 
-
-Thankfully in this day and age the internet is pretty much ubiquitous amongst developers. Getting answers from StackOverflow is second nature to many. Taking to twitter to chat and shitpost is standard. And amongst the shitposting and noise is golden nuggets of information. Conversations to spark up. Ideas to pursue. 
-
-Some I've done whilst at Confluent is help launch a https://forum.confluent.io/[Discourse-based forum] to complement the existing Slack workspace that we have. With these two platforms I have tens of thousands of developers in my field of interest at my fingertips. 
-
-As well as our own community platforms, I've had a lot of great interactions on StackOverflow, Twitter, and Reddit. Find out where your communities hang out, and go *to* them. A community platform that you curate and run is a nice space that's familar and important to have, but remember that developers may not take the time to look for *your* platform. General tech platforms like StackOverflow (and appropriate subreddits) are where devs also head, and if you don't participate in those then you're ignoring part of your audience. 
-
-I see several concrete results from interacting with the online community: 
-
-1. Enriching and strengthening the community by helping answer questions, model good behaviour, welcoming new users. 
-2. Developing an online reputation as a person who is helpful and hopefully to be trusted, not just a shill who only talks _at_ developers. When my name is subsequently seen on a blog or video I'm _that guy_ who already helped them. 
-3. Get ideas for blog posts and talks. Some of my most popular material started life as this. My favourite is an https://talks.rmoff.net/qrgjuz/all-at-sea-with-streams-using-kafka-to-detect-patterns-in-the-behaviour-of-ships[entire conference talk] sparked by interest in a single fascinating question that someone asked on our Slack group. 
-4. Spot opportunity for product and documentation feedback. Sometimes this is just logging a ticket, oftentimes it's arranging an introduction between the community member and the relevant product manager or engineer related to the issue being discussed. 
-
-=== Developer Experience 
-
-The team of which I'm part of at work rolls up into a larger team called `DevX`, or Developer Experience. It broadly encompasses all the usual devrel areas you'd expect, but its name also suggests a crucial part of what a Developer Advocate can provide. Just as the interface on a web app will be designed and refined by the UX (User Experience) team, a developer's interactions with software, its APIs, and its documentation falls broadly under the "Developer Experience". 
-
-Developer Advocates are well placed to be a key resource for improving developer experience, because they *are* developers, and part of their job is communicating. A good Developer Advocate should be able to not only identify a friction point but articulate how a developer would expect it to behave, and communicate clearly how to do this. That could be an API in the software, an error message, a tutorial, or anything else that developers interface with. 
-
-=== Building stuff (the devex engineer role)
-
-In recent times I've noticed an increase in the `Engineer` job title in the devrel space (`DevEx Engineer` for example), and it usefully captures a huge part of what some devrel folk do. Behind many brilliant talks lies some great code that enabled that demo. Supporting many a successful implementation of your product may be a library or set of hacks. Creating demos, writing the "sticky tape" scripts and examples - these are great examples of DevRel engineering. In many cases it will be the person doing the talk that wrote the demo, that spun out script from another talk into its own github repo. But there are plenty of cases where the engineer and advocate can work collaboratively for efficiency and scale. 
-
-== So is travel redundant in developer advocacy? 
-
-Don't be ridiculous :-P
-
-Humans crave face-to-face interactions. Virtual conferences will _never_ come close to replicating that. The in-person conference will always be a thing, and Developer Advocates can play an important role in bringing new technologies and ideas to developers at these conferences.
-
-My thesis is that you don't *have* to travel. It is not that you *shouldn't* travel.
-
-This is also on a personal level. Can I, as a Developer Advocate, avoid travelling and still be effective? Yes, I think so. Can a company's entire DevRel efforts be done virtually as successfully as they might be with a proportion of travel involved? I would say not. 
-
-== Footnote: Lockdown, no thanks
-
-March 2020 (and several times thereafter) we in the UK were locked down. Nowhere was open (unless you needed to https://www.theguardian.com/lifeandstyle/2020/dec/17/people-wont-forget-dominic-cummings-visit-barnard-castle-learns-to-live-with-notoriety[test your eyesight] or have a https://www.theguardian.com/politics/2021/dec/20/raab-says-pm-and-staffs-garden-gathering-was-within-lockdown-rules[work meeting]…), and people stayed at home. Now it's 2022 and we can thankfully go out again—and I've realised that even if I'm not travelling with work, I don't want to be at home 100% of the time. The same four walls, with interactions solely on Zoom or Slack, is not a great environment to be in without a break. I've taken to blocking out my calendar in the mornings on some days and just going to work in a coffee shop. I don't know what the logic of it is, because you'd think it would be more distracting than being at home, but something about it actually helps me focus. It was the same when I was travelling - a three hour train journey, or layover in an airport lounge somewhere, would sometimes be my most productive times.
-
+Read my link:/2022/04/04/remote-first-developer-advocacy/[next post] to see what it means to be a Developer Advocate and not travel.
